--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,8 +5,8 @@
     <div class="col-4">
         <ul class="d-flex justify-content-between align-items-end ">
             <li><a href="">About</a></li>
-            <li><a href="">GitHub</a></li>
-            <li><a href="">LinkedIn</a></li>
+            <li><a href="https://www.github.com/atsianis">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/atsianis">LinkedIn</a></li>
         </ul>
     </div>
 </div>
