About Link left empty for future routing implementation

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="col-4">
         <ul class="d-flex justify-content-between align-items-end ">
-            <li><a href="">About</a></li>
+            <li><button>About</button></li>
             <li><a href="https://www.github.com/atsianis">GitHub</a></li>
             <li><a href="https://www.linkedin.com/in/atsianis">LinkedIn</a></li>
         </ul>
