--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -22,3 +22,14 @@ ul li a:hover{
     text-decoration: underline;
     color: black;
 }
+button{
+    color:white;
+    border:none;
+    background-color:transparent;
+    outline:none;
+    transition: all 200ms ease;
+}
+button:hover{
+    text-decoration: underline;
+    color: black;
+}
