--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,2 +1,3 @@
 <!-- <app-product-list></app-product-list> -->
-<app-country-list></app-country-list>  
+<app-country-list></app-country-list>
+<app-about></app-about>
