--- a/src/app/countries/country-list/country-list.component.html
+++ b/src/app/countries/country-list/country-list.component.html
@@ -3,12 +3,15 @@
 </div>
 <hr>
 <div class="row justify-content-center">
-        <label>Search Countries:</label>
-        <input type="text" class="form-control" 
-                [(ngModel)]="search" 
-                (input)="onInput()">
+        <div class="box">
+                <label>Search: </label>
+                <input type="text" class="form-control" 
+                        [(ngModel)]="search" 
+                        (input)="onInput()">
+        </div>
+        
 </div>
-<div class="row">
+<div class="row justify-content-between align-items-center">
         <div class="col-md-3" *ngFor="let c of searched">
                 <app-country-card [country]="c"></app-country-card>
         </div>
